@@ -1,0 +1,21 @@
+<html>
+<head>
+<title></title>
+</head>
+<body>
+
+<h1>new()</h1>
+
+<p>Object contstructor.</p>
+
+<h3>show_help_and_die()</h3>
+
+<p>Just as the name suggests - calling this method will print help for program, and exit it with error-code (1).</p>
+
+<p>Empty lines, and comment lines (starting with #) are ignored.</p>
+
+<h1>POD ERRORS</h1>
+
+</body>
+</html>
+
