@@ -1,0 +1,31 @@
+<div id="pgxndoc">
+  <div id="pgxntoc">
+    <h3>Contents</h3>
+    <ul class="pgxntocroot">
+      <li><a href="#new.">new()</a>
+        <ul><li>
+            <ul>
+              <li><a href="#show_help_and_die.">show_help_and_die()</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#POD.ERRORS">POD ERRORS</a></li>
+    </ul>
+  </div>
+  <div id="pgxnbod">
+
+<h1 id="new.">new()</h1>
+
+<p>Object contstructor.</p>
+
+<h3 id="show_help_and_die.">show_help_and_die()</h3>
+
+<p>Just as the name suggests - calling this method will print help for program, and exit it with error-code (1).</p>
+
+<p>Empty lines, and comment lines (starting with #) are ignored.</p>
+
+<h1 id="POD.ERRORS">POD ERRORS</h1>
+
+</div>
+</div>
