@@ -5,6 +5,8 @@ Revision history for Perl extension PGXN::API
         dropped the nasty hack required to work around the lack of it in
         earlier versions.
       - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
+      - Fixed a bug on the HTML documentation table of contents generator
+        where it would choke on finding an `h1` after an `h3`.
 
 0.16.2  2012-02-14T06:46:47Z
       - Empty Documentation files are no longer indexed or displayed.
